plugins {
  id 'org.springframework.boot' version '3.1.0'
  id 'io.spring.dependency-management' version '1.1.0'
  id 'java'
}

group = 'ru.sfsto'
version = '0.1.0'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  runtimeOnly 'com.h2database:h2'
  runtimeOnly 'org.postgresql:postgresql'
  // JWT dependencies split into api + impl per latest jjwt packaging
  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
  // Optional Jackson module if you plan to serialize/deserialize tokens with Jackson (not mandatory)
  // runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  implementation 'org.flywaydb:flyway-core'
}

test {
  useJUnitPlatform()
}
